<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/queen"
        android:layout_width="@dimen/promotion_piece_size"
        android:layout_height="@dimen/promotion_piece_size"
        android:layout_margin="8dp"
        android:contentDescription="@string/queen"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/rook"
        android:layout_width="@dimen/promotion_piece_size"
        android:layout_height="@dimen/promotion_piece_size"
        android:layout_margin="8dp"
        android:contentDescription="@string/rook"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/bishop"
        android:layout_width="@dimen/promotion_piece_size"
        android:layout_height="@dimen/promotion_piece_size"
        android:layout_margin="8dp"
        android:contentDescription="@string/bishop"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/knight"
        android:layout_width="@dimen/promotion_piece_size"
        android:layout_height="@dimen/promotion_piece_size"
        android:layout_margin="8dp"
        android:contentDescription="@string/knight"
        android:scaleType="fitCenter" />

</LinearLayout>